--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -6,6 +6,10 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
+
+	@media (max-width: $md - 1) {
+		padding: 10px 15px 0;
+	}
 }
 .logo {
 	position: relative;
@@ -13,7 +17,7 @@
 	height: 90px;
 
 	@media (max-width: $md - 1) {
-		height: 75px;
+		height: 70px;
 	}
 }
 .gbph-fill {
