--- a/src/scss/partials/_nav.scss
+++ b/src/scss/partials/_nav.scss
@@ -3,6 +3,7 @@
 	z-index: 10;
 	display: flex;
 	align-items: center;
+	padding: 0;
 	border: 0;
 	background-color: transparent;
 	cursor: pointer;
@@ -99,6 +100,8 @@
 	position: absolute;
 	left: 0;
 	top: -100vh;
+	padding-left: 15px;
+	padding-right: 15px;
 	width: 100vw;
 	height: 100vh;
 	background-color: $white;
@@ -196,8 +199,6 @@ body:not(.nav-toggled) {
 // *******************************
 
 .nav-mini {
-	position: absolute;
-	bottom: 50px;
 	width: 100%;
 	counter-reset: navnum;
 }
